--- a/index.html
+++ b/index.html
@@ -14,47 +14,58 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            overflow: hidden;
         }
 
         .gallery-container {
-            width: 90%;
-            margin: 20px auto;
+            width: 100%;
+            height: calc(100vh - 150px);
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-rows: 1fr;
+            gap: 10px;
+            padding: 10px;
+            box-sizing: border-box;
+            overflow-y: auto;
         }
 
         .gallery-item {
             background-color: #1e1e1e;
-            padding: 15px;
             border-radius: 8px;
             text-align: center;
-            word-wrap: break-word;
-            max-width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding: 10px;
+            overflow: hidden;
         }
 
         .gallery-item img, .gallery-item video {
             width: 100%;
-            max-width: 300px;
             height: auto;
+            max-height: 100%;
             border-radius: 8px;
             margin-bottom: 10px;
+            object-fit: contain;
         }
 
         .gallery-item p {
             margin: 5px 0;
+            font-size: 0.9em;
+            word-wrap: break-word;
         }
 
         .pagination {
-            margin: 20px 0;
-            display: flex;
-            justify-content: center;
-            gap: 10px;
             width: 100%;
             position: fixed;
             bottom: 0;
+            left: 0;
             background-color: #121212;
             padding: 10px 0;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
             z-index: 1000;
         }
 
@@ -90,16 +101,8 @@
             .gallery-container {
                 grid-template-columns: repeat(3, 1fr);
             }
-            .gallery-item {
-                padding: 10px;
-                max-width: 100%;
-            }
-            .gallery-item img, .gallery-item video {
-                max-width: 100%;
-                margin-bottom: 5px;
-            }
-            .order-select select, .items-select select {
-                width: 100%;
+            .gallery-item p {
+                font-size: 0.8em;
             }
         }
     </style>
